<resources>
    <string name="app_name">NguyenHa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview_text_email">Email</string>
    <string name="textview_text_user_email">user@email.com</string>
    <string name="textview_text_welcome_back">Welcome Back!</string>
    <string name="textview_text_please_login">Please login to continue</string>
    <string name="textview_text_email_address">Email address</string>
    <string name="edittext_hint_user_email">user@email.com</string>
    <string name="textview_text_password">Password</string>
    <string name="textview_text_forgot_password">Forgot password?</string>
    <string name="edittext_hint_password">********</string>
    <string name="button_text_login">Login</string>
    <string name="textview_text_new_to_sratch">New to sratch?</string>

    <string name="textview_text_create_account_here">Create Account Here</string>
    <string name="textview_text_start_from_scratch">Start \nfrom Scratch</string>
    <string name="textview_text_fullname">Fullname</string>
    <string name="edittext_hint_fullname">Nguyen Ha X.</string>
    <string name="button_text_create_account">Create Account</string>
    <string name="textview_text_already_have_an_account">Already have an account?</string>
    <string name="textview_text_login_here">Login Here</string>
    <string name="textview_text_edit_profile">Edit Profile</string>
    <string name="textview_text_edit_profile_picture">Edit Profile Picture</string>
    <string name="textview_text_bio">Bio</string>
    <string name="edittext_hint_potato_master">Potato Master</string>
    <string name="edittext_text_private_information">Private Information</string>
    <string name="textview_text_phone">Phone</string>
    <string name="edittext_hint_phone">+84 386971275</string>
    <string name="button_text_save_profile">Save Profile</string>
    <string name="textview_text_user_bio">Potato Master</string>
    <string name="edittext_hint_enter_your_bio">Enter your bio</string>
    <string name="textview_text_my_kitchen">My Kitchen</string>
    <string name="textview_text_nick_evans">Nick Evans</string>
    <string name="textview_text_potato_master">Potato Master</string>
    <string name="textview_text_settings">Settings</string>
    <string name="textview_text_23k_likes">23k likes</string>
    <string name="textview_text_584_followers">584 followers</string>
    <string name="textview_text_text_dot">.</string>
    <string name="textview_text_email_header">nguyen.ha@asiantech.vn</string>
    <string name="textview_text_delete">Delete</string>
    <string name="textview_text_edit">Edit</string>
    <string name="textview_text_your_username">Your username</string>
    <string name="textview_text_confirm_password">Confirm Password</string>
    <string name="textview_text_username">Username</string>
    <string name="textview_text_your_nickname">Your nickname</string>
    <string name="textview_text_nickname">Nickname</string>
    <string name="textview_text_add_todo">Add Todo</string>
    <string name="textview_text_logout">Logout</string>
    <string name="textview_text_update_to_do">Update To Do</string>
    <string name="textview_hint_fill_something">Fill something</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="button_text_edit_profile">Edit Profile</string>
    <string name="textview_text_choose_avater">Choose your avatar from gallery</string>
    <string name="button_text_add_todo">Add Todo</string>
    <string name="button_text_edit_todo">Edit Todo</string>
    <string name="toast_register_success">Register Successfully</string>


</resources>
