<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asiantech.internship.summer.layout.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"/>

        <ImageView
            android:id="@+id/imageHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_img_img_header"
            android:scaleType="centerCrop"
            android:src="@drawable/image_header"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/layout_width_92"
            android:layout_height="@dimen/layout_height_32dp"
            android:layout_marginTop="@dimen/layout_margintop_60dp"
            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/image_logo"/>

        <TextView
            android:layout_width="@dimen/layout_width_304dp"
            android:layout_height="@dimen/layout_height_64dp"
            android:layout_marginLeft="@dimen/layout_marginleft_20dp"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintLeft_toLeftOf="@id/imgLogo"
            android:layout_marginTop="@dimen/layout_margintop_44dp"
            android:fontFamily="Nunito-Bold"
            android:textSize="@dimen/textview_textsize_24sp"
            android:text="@string/textview_text_start_from_scratch"/>

        <TextView
            android:textSize="@dimen/textview_textsize_14sp"
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageHeader"
            app:layout_constraintLeft_toLeftOf="@+id/g2"
            android:text="@string/textview_text_create_account_here"
            android:fontFamily="Nunito-Regular"/>

        <TextView
            android:id="@+id/tvFullname"
            android:layout_width="@dimen/layout_width_84dp"
            android:layout_height="19sp"
            android:text="@string/textview_text_fullname"
            android:layout_marginTop="@dimen/layout_margintop_20dp"
            android:textSize="@dimen/textview_textsize_14sp"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            app:layout_constraintLeft_toRightOf="@+id/g2"/>

        <EditText
            android:id="@+id/edtFullname"
            android:layout_width="@dimen/layout_width_276dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_fullname"
            app:layout_constraintTop_toBottomOf="@+id/tvFullname"
            app:layout_constraintEnd_toEndOf="@id/g3"
            app:layout_constraintStart_toStartOf="@id/g2"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="@dimen/layout_width_84dp"
            android:layout_height="@dimen/layout_height_20dp"
            android:text="@string/textview_text_email"
            android:layout_marginTop="@dimen/layout_margintop_20dp"
            android:textSize="@dimen/textview_textsize_14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtFullname"
            app:layout_constraintLeft_toRightOf="@+id/g2"/>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="@dimen/layout_width_376dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_user_email"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:layout_constraintEnd_toEndOf="@id/g3"
            app:layout_constraintStart_toStartOf="@id/g2"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="@dimen/layout_width_84dp"
            android:layout_height="@dimen/layout_height_20dp"
            android:text="@string/textview_text_password"
            android:layout_marginTop="@dimen/layout_margintop_20dp"
            android:textSize="@dimen/textview_textsize_14sp"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername"
            app:layout_constraintLeft_toRightOf="@+id/g2"/>


        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="@dimen/layout_width_376dp"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_hint_password"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
            app:layout_constraintEnd_toEndOf="@id/g3"
            app:layout_constraintStart_toStartOf="@id/g2"/>

        <Button
            android:textColor="#FFFFFF"
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/layout_width_376dp"
            android:layout_height="@dimen/layout_height_52dp"
            app:layout_constraintStart_toStartOf="@id/g2"
            app:layout_constraintEnd_toEndOf="@id/g3"
            android:background="@drawable/button"
            android:text="@string/button_text_create_account"

            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            android:layout_marginTop="@dimen/layout_margintop_20dp"/>

        <TextView
            android:id="@+id/tvSratch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_already_have_an_account"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/layout_margintop_20dp"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            app:layout_constraintLeft_toLeftOf="@id/g2"
            app:layout_constraintRight_toRightOf="@id/g3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textview_color_account"
            android:text="@string/textview_text_login_here"
            app:layout_constraintTop_toBottomOf="@id/tvSratch"
            app:layout_constraintLeft_toLeftOf="@id/g2"
            app:layout_constraintRight_toRightOf="@id/g3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/layout_marginbottom_32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
