<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintRight_toLeftOf="@+id/guideLineRight"
            app:layout_constraintTop_toTopOf="@+id/imgAvatar"
            tools:ignore="PrivateResource" />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_text_dot"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"
            app:layout_constraintRight_toLeftOf="@+id/tvLikes"
            app:layout_constraintTop_toBottomOf="@+id/tvBio" />

        <TextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_text_23k_likes"
            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"
            app:layout_constraintTop_toBottomOf="@+id/tvBio" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/textview_text_584_followers"
            app:layout_constraintLeft_toRightOf="@+id/guideLineCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvBio" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_settings"
            app:layout_constraintRight_toLeftOf="@+id/guideLineRight"
            app:layout_constraintTop_toTopOf="@+id/tvMyKitchen" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_text_nick_evans"
            android:textColor="@color/textview_textcolor_black"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideLineCenter"
            app:layout_constraintTop_toTopOf="@+id/imgAvatar" />

        <TextView
            android:id="@+id/tvMyKitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="Nunito-Bold"
            android:text="@string/textview_text_my_kitchen"
            android:textColor="@color/textview_textcolor_black"
            android:textSize="24dp"
            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_text_user_bio"
            app:layout_constraintLeft_toLeftOf="@+id/guideLineCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="143dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/img_avatar"
            app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvMyKitchen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
